make shortcuts configureable

--- a/config.json
+++ b/config.json
@@ -10,5 +10,9 @@
     "tags": {
         "change": "00change",
         "add": ""
+    },
+    "shortcuts": {
+        "add": "Shift+A",
+        "change": "c"
     }
 }
